bugfix post auth redirection and spawning of collections